# maintainer-readiness-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: maintainer-readiness.yml  publish-python.yml
docs/: community-launch.md  pypi.md  usage.md
examples/: README.md  github-action.yml  maintainer-readiness.toml  sample-report.md
examples/reports/: local-node-app-sanitized.md  maintainer-readiness-kit.md  speca-public-snapshot.md
src/maintainer_readiness/: __init__.py  badge.py  checks.py  cli.py  config.py  github.py  report.py  sarif.py  templates.py
tests/: test_badge.py  test_checks.py  test_cli.py  test_github.py  test_sarif.py  test_templates.py
