[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maintainer-readiness-kit"
version = "0.1.0"
description = "Generate maintainer-readiness reports for open source repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "YUUDAI-s" }]
keywords = ["open-source", "maintainer", "github", "security", "triage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
maintainer-readiness = "maintainer_readiness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
