[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "maintainer-readiness-kit"
version = "0.3.2"
description = "Generate maintainer-readiness reports for open source repositories."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "YUUDAI-s" }]
keywords = ["open-source", "maintainer", "github", "security", "triage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
maintainer-readiness = "maintainer_readiness.cli:main"

[project.urls]
Homepage = "https://github.com/YUUDAI-s/maintainer-readiness-kit"
Repository = "https://github.com/YUUDAI-s/maintainer-readiness-kit"
Issues = "https://github.com/YUUDAI-s/maintainer-readiness-kit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
